remove deprecated flag